youfull/objects/User_Sales_Org_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <label>Account Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_ACCT_NR_SLS_ORG_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID_ACCT_NR_SLS_ORG_KEY</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>User_Sales_Org_Hierarchies</relationshipLabel>
        <relationshipName>User_Sales_Org_Hierarchy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_CD__c</fullName>
        <label>SLS_ORG_CD</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_LVL_CD__c</fullName>
        <label>SLS_ORG_LVL_CD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>User_Sales_Org_Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>USLS-{000000}</displayFormat>
        <label>User Sales Org Hierarchy Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_Sales_Org_Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>